[Lanai-276] Fix bug description is overflow

--- a/Lanai/src/Lanai/wwwroot/css/site.css
+++ b/Lanai/src/Lanai/wwwroot/css/site.css
@@ -319,17 +319,17 @@ section.top-menu{
     margin-left:5px;
 }
 .photo-item .title{
-    margin-top:25px;
+    margin-top:18px;
+    margin-bottom:7px;
     font-family: Montserrat-Bold;
 	font-size: 18px;
 	color: #3c6cde;
 }
 .photo-item .description{
-    padding-top:7px;
     font-family: Montserrat-Light;
 	font-size: 14px;
 	color: #8b94ae;
-    height:105px;
+    height:194px;
     overflow:hidden;
 }
 .m-b-50{
